Updating profile picture

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Boyi Guo"
-  avatar           : "profile.png"
+  avatar           : "Boyi_Guo_20190924.png"
   bio              : "A Biostatistics Ph.D. Student Struggling with Dissertation"
   location         : "Location"
   employer         :
