--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,7 +16,7 @@ main:
     url: /year-archive/
     
   - title: "CV"
-    url: /cv/
+    url: https://www.overleaf.com/read/npnnsrdfqfqf
     # 
   # - title: "Guide"
   #   url: /markdown/
