--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,10 +9,10 @@ website:
     left:
       - href: index.qmd
         text: Home
-      # - projects.qmd
+      - projects.qmd
       - href: https://www.overleaf.com/read/npnnsrdfqfqf
         text: CV
-      - about.qmd
+      # - about.qmd
 
 format:
   html:
