--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,10 +10,11 @@ website:
       - icon: house-door-fill
         href: https://boyi-guo.com
         aria-label: Home
-      # - about.qmd
-      - projects.qmd
       - href: https://www.overleaf.com/read/gdttrkmmwncb#4463ee
         text: CV
+      # - about.qmd
+      - projects.qmd
+      - software.qmd
       - blog.qmd
 
 
